examples/tests/semantic/fail/wrongBreak.tig
let 
    var taylor := "Taylor"
in 
    break 
end 